--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>卡BIN查询</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <link rel="icon" href="cardbin.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
