--- a/public/result.html
+++ b/public/result.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIN 查询结果</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="cardbin.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
