feat: 新增 PNG 格式 favicon 支持，兼容更多浏览器

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <link rel="icon" href="cardbin.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" href="cardbin.png">
 </head>
 <body>
     <div class="container">
