--- a/public/result.html
+++ b/public/result.html
@@ -6,6 +6,7 @@
     <title>BIN 查询结果</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="cardbin.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" href="cardbin.png">
 </head>
 <body>
     <div class="container">
